--- a/project-1/assets/css/styles.css
+++ b/project-1/assets/css/styles.css
@@ -21,10 +21,6 @@ html {
   font-weight: 600;
 }
 
-#navbar {
-    padding-right: 20px;
-}
-
 #navbar ul .small-link {
   color: #757575;
 }
@@ -35,6 +31,10 @@ html {
 
 #mobile-nav li .selected {
   background-color: #f5f5f5;
+}
+
+#counter {
+  font-weight: 600;
 }
 
 
@@ -113,5 +113,11 @@ main {
 @media screen and (min-width: 601px) {
   #steps div {
     padding: 20px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  #counter {
+    display: none;
   }
 }
