--- a/project-1/assets/css/styles.css
+++ b/project-1/assets/css/styles.css
@@ -49,6 +49,9 @@ main {
 }
 
 #map {
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
   margin-bottom: 20px;
   height: 200px;
   width: 100%;
