--- a/project-1/assets/css/styles.css
+++ b/project-1/assets/css/styles.css
@@ -90,7 +90,14 @@ main {
   width: 50px;
 }
 
-
+iframe {
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+  margin-bottom: 20px;
+  height: 200px;
+  width: 100%;
+}
 /*MODALS*/
 
 #modals {
